bugfix/web-1124 dropdown overflow issue fixed at clubs wall modal

--- a/client/app/containers/controlpanel/manage/feeds/list/components/feed-settings-modal/feed-settings-modal.component.scss
+++ b/client/app/containers/controlpanel/manage/feeds/list/components/feed-settings-modal/feed-settings-modal.component.scss
@@ -10,6 +10,10 @@
     max-height: 250px;
     overflow: scroll;
   }
+
+  &__custom-css {
+    overflow: unset;
+  }
 }
 
 .feed-form {
